--- a/src/index.css
+++ b/src/index.css
@@ -112,8 +112,63 @@ html {
     width: 100%;
     height: var(--navbar-height);
     background-color: #F8F8F8;
+    display: flex;
+    justify-content: space-between;
 }
 
+.navigation {
+    height: var(--navbar-height);
+    display: flex;
+    align-items: center;
+    margin-left: 30px;
+}
+
+.navigation-link {
+    text-decoration: none;
+    color: #333;
+    font-size: 25px;
+    font-weight: 500;
+}
+
+.navigation-link:hover {
+    color: var(--active-color);
+}
+
+.navigation-slash {
+    display: block;
+    font-size: 25px;
+    font-weight: 500;
+    margin: 0 20px;
+}
+
+
+.logout {
+    display: flex;
+    align-items: center;
+}
+
+.logout-icon-link {
+    margin-right: 30px;
+}
+
+.logout-icon-link:hover .logout-icon{
+    opacity: 0.8;
+}
+
+.logout-icon {
+    background-color: #2A2A2A;
+    color: #fff;
+    padding: 5px;
+    border-radius: 5px;
+    font-size: 25px;
+}
+
+.logout-text-link {
+    text-decoration: none;
+    font-size: 18px;
+    margin-right: 10px;
+    color: #333;
+}
 /* End Navbar */
 
 
