7. Code UI for Manage Component without animation

--- a/src/index.css
+++ b/src/index.css
@@ -220,11 +220,62 @@ html {
 
 /* Begin Temperature and Humidity Realtime */
 .measure {
-
+    width: 160px;
+    height: 160px;
+    position: relative;
 }
 
-.measure-circle {
-    
+.measure-cirle {
+    height: 160px;
+    width: 160px;
+    border-radius: 50%;
+    padding: 20px;
+    box-shadow: 6px 6px 10px -1px rgba(0, 0, 0 , 0.15),
+                -6px -6px 10px -1px rgba(255, 255, 255 , 0.7);
+}
+
+.measure-circle-value {
+    height: 120px;
+    width: 120px;
+    border-radius: 50%;
+    box-shadow: inset 4px 4px 6px -1px rgba(0, 0, 0 , 0.2),
+                inset -4px -4px 6px -1px rgba(255, 255, 255 , 0.7),
+                -0.5px -0.5px 0px rgba(255, 255, 255 , 1),
+                0.5px 0.5px 0px rgba(0, 0, 0 , 0.15),
+                0px 12px 10px -10px rgba(0, 0, 0 , 0.05);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.measure-value {
+    font-weight: 700;
+    color: #555;
+    font-size: 30px;
+}
+/* 
+circle {
+    fill: none;
+    stroke: url(#GradientColor);
+    stroke-width: 20px;
+    stroke-dasharray: 472;
+    stroke-dashoffset: 354;
+    transform-origin: center;
+    transform: rotate(-90deg);
+    animation: anim 2s linear forwards;
+} */
+
+svg {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+@keyframes anim {
+    from {
+        stroke-dashoffset: 354;
+    }
 }
 /* End Temperature and Humidity Realtime */
 /* End Content */ 
