--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ html {
 /* Begin Sidebar */
 .sidebar {
     background-color: #2A2A2A;
-    height: 100vh;
+    /* height: 100vh; */
     width: 250px;
     display: flex;
     flex-direction: column;
@@ -219,6 +219,18 @@ html {
 }
 
 /* Begin Temperature and Humidity Realtime */
+.measure-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.measure-text {
+    margin-top: 30px;
+    margin-bottom: 20px;
+    font-size: 20px;
+}
+
 .measure {
     width: 160px;
     height: 160px;
@@ -272,10 +284,10 @@ svg {
     left: 0;
 }
 
-@keyframes anim {
+/* @keyframes anim {
     from {
         stroke-dashoffset: 354;
     }
-}
+} */
 /* End Temperature and Humidity Realtime */
 /* End Content */ 
