--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,7 @@ html {
 .sidebar {
     background-color: #2A2A2A;
     /* height: 100vh; */
+    /* overflow: scroll; */
     width: 250px;
     display: flex;
     flex-direction: column;
@@ -289,5 +290,62 @@ svg {
         stroke-dashoffset: 354;
     }
 } */
+
+/* Realtime statistic index */
+
+.statistic-wrapper {
+    margin-top: 40px;
+}
+
+.statistic-index {
+    margin-top: 30px;
+    display: flex;
+    align-items: center;
+}
+
+.statistic-text{
+    font-size: 18px;
+    font-weight: 500;
+    display: block;
+    width: 50px;
+}
+.statistic-value {
+    font-size: 18px;
+    font-weight: 500;
+    display: block;
+    width: 50px;
+}
+
+
+.progress-bar-wrapper {
+    margin-left: 50px;
+    margin-right: 30px;
+    width: 200px;
+    height: 20px;
+    border-radius: 2rem;
+    position: relative;
+    overflow: hidden;
+    transition: all 0.5s;
+    will-change: transform;
+    box-shadow: 0 0 5px #e76f51;
+}
+
+.progress-bar {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    content: "";
+    background-color: #e76f51;
+    top:0;
+    bottom: 0;
+    left: -100%;
+    border-radius: inherit;
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    color: white;
+    font-family: sans-serif;
+}
+
 /* End Temperature and Humidity Realtime */
 /* End Content */ 
