--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ html {
 /* Begin Sidebar */
 .sidebar {
     background-color: #2A2A2A;
-    /* height: 100vh; */
+    /* height: 100%; */
     /* overflow: scroll; */
     width: 250px;
     display: flex;
@@ -174,6 +174,7 @@ html {
 .content {
     height: calc(100vh - var(--navbar-height));
     background-color: #fff;
+    overflow: scroll;
 }
 
 .content-navigation {
@@ -353,7 +354,15 @@ svg {
 /* Start Analysis */
 .line-graph-wrapper {
     display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
+.line-graph-wrapper h3 {
+    margin-top: 30px;
+    font-size: 25px;
+}
+
 .line-graph-wrapper canvas{
     margin: 0 auto;
     width: 100%;
